--- a/public/index.html
+++ b/public/index.html
@@ -1,9 +1,10 @@
 <!doctype html>
-<html lang="fa">
+<html lang="fa" dir="rtl">
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
+    <link rel="shortcut icon" href="./logo.png" type="image/x-icon">
     <title>IranZamin Hotel</title>
   </head>
   <body>
