--- a/public/index.html
+++ b/public/index.html
@@ -3,9 +3,9 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="theme-color" content="#000000" />
-    <link rel="shortcut icon" href="./logo.png" type="image/x-icon">
-    <title>IranZamin Hotel</title>
+    <meta name="theme-color" content="#232e26" />
+    <link rel="shortcut icon" href="./logo.png" type="image/x-icon" />
+    <title>Alizadeh Hotel</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
